adding login/logout and modifying code